# RLTower

./: .gitignore  CMakeLists.txt  README.md  package-win.sh  toolchain-mingw.cmake
.github/workflows/: version-bump.yml
Game/: toolchain.cmake
Game/res/localization/en/: effects.json  enemies.json  items.json  spells.json  strings.json
Game/src/: main.cpp
Game/src/Character/: Character.cpp  Character.h  CharacterProgress.cpp  CharacterProgress.h  Enemy.cpp  Enemy.h  NPC.cpp  NPC.h  Player.cpp  Player.h
Game/src/Effect/: Effect.cpp  Effect.h  EffectStat.h  EffectType.h
Game/src/Enum/: Direction.h
Game/src/Manager/Characters/: EnemyManager.cpp  EnemyManager.h
Game/src/Manager/Controls/: InputManager.cpp  InputManager.h
Game/src/Manager/Effect/: EffectManager.cpp
Game/src/Manager/Game/: GameManager.cpp  GameManager.h  MapManager.cpp  MapManager.h
Game/src/Manager/Item/: ItemManager.cpp  ItemManager.h
Game/src/Manager/Spell/: SpellManager.cpp  SpellManager.h
Game/src/Manager/UI/: UiManager.cpp  UiManager.h
Game/src/Map/: BSP2.cpp  BSP2.h  Cell.cpp  Cell.h  Container.h
Game/src/Menu/: CharacterMenu.cpp  ConsoleMenu.cpp  ConsoleMenu.h  DialogMenu.cpp  DialogMenu.h  EffectMenu.cpp  EffectMenu.h  EquipmentMenu.cpp  EquipmentMenu.h  InventoryMenu.cpp  InventoryMenu.h  ItemMenu.cpp  SpellMenu.cpp  StatusMenu.cpp  StatusMenu.h
Game/src/Misc/: Config.h  Utils.cpp  Utils.h
Game/src/Object/: Item.cpp  Item.h  ItemType.h  RarityType.h  WeaponType.h
Game/src/Object/Equipment/: Amulet.cpp  Amulet.h  Chests.cpp  Chests.h  Equipment.cpp  Equipment.h  Gloves.cpp  Gloves.h  Helmet.cpp  Helmet.h  Leggings.cpp  Leggings.h  Ring.cpp  Ring.h  Shield.cpp  Shield.h  Weapon.cpp  Weapon.h
Game/src/Object/Misc/: Consumable.cpp  Consumable.h  Containers.cpp  Containers.h  Misc.cpp  Misc.h  Projectile.cpp  Projectile.h
Game/src/Spell/: Spell.cpp  Spell.h  SpellEnergy.h
WebViewer/RLTower-viewer/: README.md  package-lock.json  package.json
res/localization/en/: effects.json  enemies.json  items.json  spells.json  strings.json
res/localization/fr/: strings.json
scripts/: build-mac.sh  package-mac.sh  package-win.sh
src/: main.cpp
src/Character/: Character.cpp  Character.h  CharacterProgress.cpp  CharacterProgress.h  Enemy.cpp  Enemy.h  GroupType.h  NPC.cpp  NPC.h  Player.cpp  Player.h
src/Effect/: Effect.cpp  Effect.h  EffectType.h
src/Enum/: ActionType.h  Direction.h  GroupType.h
src/Manager/Characters/: CharactersManager.cpp  CharactersManager.h  EnemyManager.cpp  EnemyManager.h
src/Manager/Config/: Config.cpp  Config.h
src/Manager/Controls/: InputManager.cpp  InputManager.h
src/Manager/Effect/: EffectManager.cpp  EffectManager.h
src/Manager/Game/: GameManager.cpp  GameManager.h  MapManager.cpp  MapManager.h
src/Manager/Item/: ItemManager.cpp
src/Manager/Localization/: LocalizationManager.h
src/Manager/Spell/: SpellManager.h
src/Manager/UI/: UiManager.cpp  UiManager.h
src/Map/: BSP2.cpp  BSP2.h  Cell.cpp  Cell.h  Container.h
src/Menu/: CharacterMenu.h  ConsoleMenu.cpp  DialogMenu.cpp  DialogMenu.h  EquipmentMenu.cpp  InventoryMenu.cpp  ItemMenu.cpp  ItemMenu.h  Menu.h  SpellMenu.cpp  SpellMenu.h  StatusMenu.cpp  StatusMenu.h
src/Menu/Debug/: DebugMenu.cpp  DebugMenu.h
src/Misc/: Logger.cpp  Logger.h  RandomUtils.cpp  RandomUtils.h  Utils.cpp  Utils.h
src/Object/: DamageType.h  Item.h  ItemType.h  RarityType.h  WeaponType.h
src/Object/Equipment/: Amulet.cpp  Amulet.h  Chests.cpp  Equipment.cpp  Equipment.h  Gloves.cpp  Helmet.cpp  Helmet.h  Ring.cpp  Shield.cpp  Weapon.cpp
src/Object/Misc/: Consumable.cpp  Consumable.h  Containers.cpp  Containers.h  Misc.cpp  Misc.h  Projectile.cpp
src/Pathfinding/: Pathfinding.cpp  Pathfinding.h
src/Spell/: Spell.cpp  Spell.h  SpellElement.h  SpellType.h
src/Struct/: AICells.h  AIDecision.h  UpdateState.cpp  UpdateState.h
src/Struct/Pathfinding/: PairHash.h  PathNode.h
